# Builder

./: .gitignore  Builder.cabal  README.md  project.txt  readmeMJH.txt  stack.yaml  untitled
src/: BF.hs  BuilderParsers.hi  BuilderParsers.hs  BuilderTypes.hi  BuilderTypes.hs  Libs.hi  Libs.hs  Main.hi  Main.hs  MyParser.hs  Net.hi  Net.hs  ParseTest.hs  Process.hs  deps.txt  hello.bf  name  project.txt  sqs.bf
