name:                Builder
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/mike-k-houghton/Builder#readme
license:             BSD3
license-file:        LICENSE
author:              value
maintainer:          value
copyright:           value
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable Builder-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, wreq, network-uri, bytestring,HTTP,
                       parsec,http-client, lens, split

  other-modules:       BuilderParsers, BuilderTypes, Libs, Net

  default-language:    Haskell2010

test-suite Builder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Builder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mike-k-houghton/Builder
